@@ -1,7 +1,9 @@
 = Version History =
 x.x:
 
+- added: auto join groups based on email invitation when joining the site
 - changed: auto notifications now listen to $NOTIFICATION_HANDLERS
+- changed: handling of invitations page
 
 2.4 (2012-11-06):
 
